# actix-blog

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: prod.yml
db/procedures/: insert_user.sql
libs/markdown-hydrate/: Cargo.toml
libs/markdown-islands/: Cargo.toml
libs/markdown-islands/src/: lib.rs  unstable.rs
libs/markdown-parse/: Cargo.toml
libs/markdown-parse/src/: component_parse.rs  lib.rs  parse.rs  value_objects.rs
libs/markdown-parse/src/parse/: lines_indices.rs
migrations/: 20231015164254_acount_kind.sql  20231015164437_accounts.sql  20231015164542_admins.sql  20231015164923_users.sql  20231015165602_create-user-insert-fn.sql  20231015170016_blogs.sql  20231015170117_comments.sql  20231015170216_replies.sql  20231015184731_update-user-insert-kind-col.sql  20231015185619_make-id-cols-auto.sql  20231018042018_add-blog-html.sql  20231029214719_create-categories.sql  20231029215204_create-sub-categories.sql  20231029215507_create-tags.sql  20231029220454_create_sub_categories_blogs.sql  20231029220617_create_tags_blogs.sql  20231202022027_add-category-to-blog.sql  20231223221404_add_preview_and_images_to_blog.sql  20240104035346_join_users_tables_ids.sql  20240112014957_add_created_at.sql  20240113154332_make_category_required.sql  20240524020609_add_description_to_blogs.sql
scripts/: build-crs.sh
src/: actix.rs  app.rs  db.rs  domain.rs  main.rs  modules.rs  persistence.rs  routes.rs  server.rs  shared.rs  sqlx.rs
src/domain/: account.rs  admin.rs  blog.rs  blog_grouping.rs  category.rs  comment.rs  reply.rs  server.rs  user.rs
src/error/: insert.rs  mod.rs
src/extractors/: auth.rs  mod.rs  partial_query.rs
src/models/: blog.rs  insert_return.rs  login.rs  mod.rs  select_slice.rs  tokens.rs  user.rs
src/modules/: account.rs  admin.rs  auth.rs  blog.rs  category.rs  comment.rs  db.rs  images.rs  reply.rs  server.rs  user.rs
src/persistence/: db.rs  images.rs  public.rs
src/routes/: auth.rs  blogs.rs  categories.rs  mod.rs  sub_categories.rs  tags.rs  users.rs
src/server/: README.md  admin.rs  app_config.rs  auth.rs  routes.rs  service.rs  shared.rs
(+236 files in other folders)
