[package]
name = "actix-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.7"
serde = "1.0.159"
serde_json = "1.0.95"
sqlx = { version="0.6.3", features=["postgres", "uuid", "runtime-actix-rustls"] } 
thiserror = "1.0.40"
uuid = { version="1.3.0", features=["serde"] } 
validator = { version= "0.16.0", features=["derive"] }
