[package]
name = "actix-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde", "clock"], default-features=false }
dotenvy = "0.15.7"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
serde = "1.0.159"
serde_json = "1.0.95"
sqlx = { version="0.6.3", features=["postgres", "uuid", "runtime-actix-rustls"] } 
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros"] }
uuid = { version="1.3.0", features=["serde"] } 
validator = { version= "0.16.0", features=["derive"] }
