[package]
name = "markdown-islands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features=["experimental-islands"] }
serde = "1.0.201"
web-sys = { version = "0.3.69", optional = true, features = ["Window", "Navigator", "Clipboard"] }

[features]
hydrate = ["leptos/hydrate", "dep:web-sys"]
ssr = ["leptos/ssr"]
